snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220822.093702-3.jar.sha512
2809f802bdc7a2bbe5099bb0b65f0a19362a2e29457a27782418eb1aa9db5f651a0390498c90a1e82feb891ce2879cea63e73bbd85b4cfe39734cd7245e35886